--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -302,10 +302,10 @@ img{
         z-index: var(--z-back);
     }
     &__html{
-        width: 95%;
+        width: 100%;
     }
     &__css{
-        width: 85%;
+        width: 100%;
     }
     &__js{
         width: 65%;
@@ -425,6 +425,7 @@ img{
         grid-template-columns: .7fr;
         justify-content: center;
         column-gap: 1rem;
+        display: flex;
     }
 
     .work__container{
