--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -319,13 +319,16 @@ img {
   row-gap: 2rem;
 }
 .work__img {
-  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
-  border-radius: 0.5rem;
+  height: 300px;
+  width: 250px;
+  box-shadow: 10px 20px 20px rgba(14, 36, 49, 0.15);
+  border-radius: 7.5rem;
   overflow: hidden;
 }
 .work__img img {
   transition: 1s;
 }
+
 .work__img img:hover {
   transform: scale(1.1);
 }
