--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -321,8 +321,10 @@ img {
 .work__img {
   height: 300px;
   width: 250px;
+  margin-left: auto;
+  margin-right: auto;
   box-shadow: 10px 20px 20px rgba(14, 36, 49, 0.15);
-  border-radius: 7.5rem;
+  border-radius: 0.5rem;
   overflow: hidden;
 }
 .work__img img {
